A few fixes.
- Fix ordering of the new "Older Notes" entry in the release notes
area to ensure it is always last.

- Fix layout issue with narrow widths clipping a few characters off the left
edge of the page.

- Remove offending href syntax leading to bogus complaints from htmlproofer.

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -46,6 +46,10 @@ a.active {
     font-weight: $linkWeight;
 }
 
+a.dropdown-item {
+    cursor: pointer;
+}
+
 table, th, td, tr {
     padding: .5em;
 }
